--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -217,14 +217,8 @@
                 <div class="card2 card border-0 px-4 py-5">
                     <div class="row mb-4 px-3">
                         <h6 class="mb-0 mr-4 mt-2">Најави се со </h6>
-                        <div class="facebook text-center mr-3">
-                            <div class="fa fa-facebook"></div>
-                        </div>
-                        <div class="twitter text-center mr-3">
-                            <div class="fa fa-twitter"></div>
-                        </div>
-                        <div class="linkedin text-center mr-3">
-                            <div class="fa fa-linkedin"></div>
+                        <div>
+                            <a href="/oauth2/authorization/google"><img src="http://pngimg.com/uploads/google/google_PNG19635.png" style="height:40px"></a>
                         </div>
                     </div>
                     <div class="row px-3 mb-4">
@@ -232,8 +226,8 @@
                         <div class="line"></div>
                     </div>
                     <div class="row px-3"> <label class="mb-1">
-                        <h6 class="mb-0 text-sm">Корисничко име</h6>
-                    </label> <input class="mb-4" type="text" name="username" placeholder="Внеси корисничко име"> </div>
+                        <h6 class="mb-0 text-sm">Е-mail адреса</h6>
+                    </label> <input class="mb-4" type="text" name="username" placeholder="Внеси е-mail адреса"> </div>
                     <div class="row px-3"> <label class="mb-1">
                         <h6 class="mb-0 text-sm">Лозинка</h6>
                     </label> <input type="password" name="password" placeholder="Внеси лозинка"> </div>
