--- a/src/main/resources/templates/wish-list.html
+++ b/src/main/resources/templates/wish-list.html
@@ -16,7 +16,7 @@
     <style>
         body {
             color: #566787;
-            background: #D0EAD0;
+            background: -webkit-linear-gradient(left, #D0EAD0, #6C945E);
             font-family: 'Roboto', sans-serif;
         }
 
