--- a/src/main/resources/templates/reserve-book.html
+++ b/src/main/resources/templates/reserve-book.html
@@ -11,7 +11,7 @@
         color: white;
         overflow-x: hidden;
         height: 100%;
-        background-color: white;
+        background: white;
         background-repeat: no-repeat;
         overflow-y: hidden;
     }
