--- a/src/main/resources/templates/sign_up_form.html
+++ b/src/main/resources/templates/sign_up_form.html
@@ -251,8 +251,8 @@
                     </label> <input class="mb-4" type="text" name="surname" placeholder="Внеси лично презиме"> </div>
 
                     <div class="row px-3"> <label class="mb-1">
-                        <h6 class="mb-0 text-sm">Корисничко име</h6>
-                    </label> <input class="mb-4" type="text" name="username" placeholder="Внеси корисничко име"> </div>
+                        <h6 class="mb-0 text-sm">Е-mail адреса</h6>
+                    </label> <input class="mb-4" type="text" name="username" placeholder="Внеси е-mail адреса"> </div>
                     <div class="row px-3"> <label class="mb-1">
                         <h6 class="mb-0 text-sm">Лозинка</h6>
                     </label> <input type="password" name="password" placeholder="Внеси лозинка"> </div>
